--- a/first.html
+++ b/first.html
@@ -9,6 +9,7 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
+<img src="img_hello_git.png" alt="hello">
 
 </body>
 </html>
